--- a/src/PortalBlade.Data/packages.config
+++ b/src/PortalBlade.Data/packages.config
@@ -6,4 +6,6 @@
   <package id="NHibernate.Castle" version="3.1.0.4000" />
   <package id="FluentNHibernate" version="1.2.0.712" />
   <package id="Ninject" version="2.2.1.4" />
+  <package id="SqlServerCompact" version="4.0.8482.1" />
+  <package id="SQLitex64" version="1.0.66" />
 </packages>
