--- a/test/PortalBlade.Data.Tests/packages.config
+++ b/test/PortalBlade.Data.Tests/packages.config
@@ -7,4 +7,6 @@
   <package id="FluentNHibernate" version="1.2.0.712" />
   <package id="NUnit" version="2.5.10.11092" />
   <package id="Ninject" version="2.2.1.4" />
+  <package id="SqlServerCompact" version="4.0.8482.1" />
+  <package id="SQLitex64" version="1.0.66" />
 </packages>
