--- a/test/PortalBlade.Data.Tests/packages.config
+++ b/test/PortalBlade.Data.Tests/packages.config
@@ -9,4 +9,5 @@
   <package id="Ninject" version="2.2.1.4" />
   <package id="SqlServerCompact" version="4.0.8482.1" />
   <package id="SQLitex64" version="1.0.66" />
+  <package id="FakeItEasy" version="1.7.4117.2" />
 </packages>
