--- a/test/PortalBlade.Data.Tests/PortalBlade.Data.Tests.csproj
+++ b/test/PortalBlade.Data.Tests/PortalBlade.Data.Tests.csproj
@@ -73,6 +73,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\DatabaseSessionTests.cs" />
+    <Compile Include="Database\DatabaseStoreTests.cs" />
     <Compile Include="DataModuleTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
