--- a/src/PortalBlade.Data/PortalBlade.Data.csproj
+++ b/src/PortalBlade.Data/PortalBlade.Data.csproj
@@ -61,6 +61,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\DatabaseSession.cs" />
+    <Compile Include="Database\DatabaseStore.cs" />
     <Compile Include="DataModule.cs" />
     <Compile Include="IDataSession.cs" />
     <Compile Include="IDataStore.cs" />
