--- a/src/PortalBlade.Data/PortalBlade.Data.csproj
+++ b/src/PortalBlade.Data/PortalBlade.Data.csproj
@@ -49,6 +49,9 @@
     <Reference Include="Ninject">
       <HintPath>..\..\packages\Ninject.2.2.1.4\lib\net40-Full\Ninject.dll</HintPath>
     </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.SQLite">
@@ -61,6 +64,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Database\DatabaseRepository.cs" />
     <Compile Include="Database\DatabaseSession.cs" />
     <Compile Include="Database\DatabaseStore.cs" />
     <Compile Include="DataModule.cs" />
