--- a/test/PortalBlade.Data.Tests/PortalBlade.Data.Tests.csproj
+++ b/test/PortalBlade.Data.Tests/PortalBlade.Data.Tests.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Database\DatabaseRepositoryTests.cs" />
     <Compile Include="Database\DatabaseSessionTests.cs" />
     <Compile Include="Database\DatabaseStoreTests.cs" />
+    <Compile Include="Database\DatabaseTransactionTests.cs" />
     <Compile Include="DataModuleTests.cs" />
     <Compile Include="Models\Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
