Simplied setup.  Just use NHibernate's session.  Added extension method to get repository.

--- a/src/PortalBlade.Data/PortalBlade.Data.csproj
+++ b/src/PortalBlade.Data/PortalBlade.Data.csproj
@@ -64,15 +64,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database\DatabaseRepository.cs" />
-    <Compile Include="Database\DatabaseSession.cs" />
-    <Compile Include="Database\DatabaseStore.cs" />
-    <Compile Include="Database\DatabaseTransaction.cs" />
+    <Compile Include="DatabaseRepository.cs" />
     <Compile Include="DataModule.cs" />
-    <Compile Include="IDataSession.cs" />
-    <Compile Include="IDataStore.cs" />
     <Compile Include="IRepository.cs" />
-    <Compile Include="ITransaction.cs" />
+    <Compile Include="ISessionExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
